@@ -163,10 +163,10 @@ class Messages
             !defined('KREXX_TEST_IN_PROGRESS')
         ) {
             // Output the messages on the shell.
-            $result = "\n\nkreXX messages\n";
+             $result = "\n\n" . $this->getHelp('shellFeedbackHeadline') . "\n";
             $result .= "==============\n";
             foreach ($this->messages as $message) {
-                $result .= $message->getText() . "\n";
+                $result .= strip_tags($message->getText()) . "\n";
             }
 
             echo $result . "\n\n";
